logs/rtt.20260324-064902.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent5)
error[E0432]: unresolved import `crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent`
  --> src/Chap53/PQMinStPer.rs:13:9
   |
13 |     use crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `view_ord_consistent` in `Chap38::BSTParaStEph::BSTParaStEph`

error[E0432]: unresolved import `crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent`
  --> src/Chap53/GraphSearchStPer.rs:10:9
   |
10 |     use crate::Chap38::BSTParaStEph::BSTParaStEph::view_ord_consistent;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `view_ord_consistent` in `Chap38::BSTParaStEph::BSTParaStEph`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `apas-verus` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 2 previous errors
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 11s
